# lua-interpreter

./: .envrc  .gitignore  .ocamlformat  README.md  default.nix  dune-project  flake.nix  lua.nix  lua_interpreter.opam
doc/: grammar.ebnf
files/: ast.ml  lexer.mll  main.ml  parser.mly
lib/: ast.ml  dune  execution.ml  lexer.mll  parser.mly  printing.ml  state.ml  token.ml  values.ml
test/: dune
test/lua/failing/: doblock.lua  returns.lua
test/lua/rosetta/: ackermann.lua  map_range.lua
test/lua/simple/: adds2.lua  bools.lua  doret.lua  error.lua  ff.lua  fib.lua  fibreak.lua  for.lua  ifs.lua  mvalues.lua  rbreak.lua  while.lua
